--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "start": "cd example && expo start",
     "start:web": "cd example && expo start -w --dev",
     "test": "TZ=Europe/Paris jest --no-watchman",
-    "test:coverage": "TZ=Europe/Paris jest --coverage",
+    "test:coverage": "TZ=Europe/Parisgit jest --coverage",
     "test:watch": "TZ=Europe/Paris jest --watch",
     "tsc:write": "yarn tsc --project tsconfig.json",
     "tsc:watch": "yarn tsc --watch --noEmit",
